# assistente-wcag

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
app/: main.py
eval/: run_eval.py  test-set.csv
src/: agent.py  pipeline.py  utils.py
