
[tool.poetry]
name = "assistente-wcag"
version = "0.1.0"
description = "Assistente com RAG e Agentes para consultar das diretrizes do WCAG."
authors = ["Paulo Hernane Fontes e Silva <paulo.hernane.silva@ccc.ufcg.edu.br>"]
license = "APACHE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
langgraph = "^0.0.60"
langchain-community = "^0.2.2"
langchain-core = "^0.2.3"
streamlit = "^1.36.0"
faiss-cpu = "^1.8.0" # ou faiss-gpu se for o caso
sentence-transformers = "^3.0.1" # para embeddings
ollama = "^0.2.1"
ragas = "^0.1.9"
pypdf = "^4.2.0"
beautifulsoup4 = "^4.12.3"
unstructured = "^0.14.5"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
