[project]
name = "assistente-wcag"
version = "0.1.0"
description = "Assistente com RAG e Agentes para consultar das diretrizes do WCAG."
authors = [
    { name = "Paulo Hernane Fontes e Silva", email = "paulo.hernane.silva@ccc.ufcg.edu.br" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "langchain>=0.2.1",
    "langgraph>=0.0.60",
    "langchain-community>=0.2.2",
    "langchain-core>=0.2.3",
    "langchain-google-genai",
    "streamlit>=1.36.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.1",
    "ollama>=0.2.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
ingestion = [
    "pypdf>=4.2.0",
    "beautifulsoup4>=4.12.3",
    "unstructured>=0.14.5",
]
evaluation = [
    "ragas>=0.1.9",
]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.5.3",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
